--- a/Concurrency/Concurrency.csproj
+++ b/Concurrency/Concurrency.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Program3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
