--- a/Concurrency/Concurrency.csproj
+++ b/Concurrency/Concurrency.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Program3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SynchronizationTest.cs" />
     <Compile Include="TaskTest.cs" />
   </ItemGroup>
   <ItemGroup>
