--- a/Concurrency/Concurrency.csproj
+++ b/Concurrency/Concurrency.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SynchronizationTest.cs" />
     <Compile Include="TaskTest.cs" />
+    <Compile Include="TestForDebug.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
